k8s/event-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-deployment
  namespace: fleet-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
      - name: event-container
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: fleet-management
spec:
  selector:
    app: event
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 80
  type: NodePort
