k8s/localization-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localization-deployment
  namespace: fleet-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localization
  template:
    metadata:
      labels:
        app: localization
    spec:
      containers:
      - name: localization-container
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: localization-service
  namespace: fleet-management
spec:
  selector:
    app: localization
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 80
  type: NodePort
